@@ -2,6 +2,8 @@
 
 2021-08-15
 
+    Added U keyboard option to QScroll to toggle Smooth upward scrolling.
+    Added S keyboard option to TIME Screen Saver to change display scale.
     Added support to uninstall using FreeDOS package managers.
     Changed installer to use QResFile binrary resources.
     Add Support to UPX compress binaries in build process.
